test/functions/sungeun/procEquals_c_string.good
procEquals_c_string.chpl:1: error: Can't overload assignments for pointer types
